testing/tests/ui/loop_cycle_wrong_argument_count.stderr
error: loop.cycle(…) cannot use an empty array
 --> ForCycle.txt:1:29
  |
       1 | {% for v in values %}{{ loop.cycle("r", "g", "b") }}{{ v }},{% endfor %}
         |                             ^ close to this token
         |
 --> tests/ui/loop_cycle_wrong_argument_count.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^
